--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
+    "react-icons": "^4.3.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
