--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://github.com/elhiloyasin/reacthree.git",
-  "name": "reacthree",
+  "homepage": "https://github.com/elhiloyasin/reactportfolio.git",
+  "name": "reactportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
